# ggbond

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
examples/: matrix_multiplication.py  simple_backend.py
ggbond/: __init__.py  ggml.pyi
src/: ggmllib.cpp
