[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "ggbond"
version = "0.1.0"
description = "Simple and naive GGML binding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AN Long", email = "aisk1988@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[project.urls]
Homepage = "https://github.com/aisk/ggbond"
"Bug Tracker" = "https://github.com/aisk/ggbond/issues"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.args = []
wheel.py-api = "cp310"
wheel.expand-macos-universal-tags = true
install.components = ["ggbond"]

# Set the minimum CMake version
cmake.minimum-version = "3.15"

# Build directory
build-dir = "build/{wheel_tag}"

# Logging level (0: error, 1: warning, 2: info, 3: debug)
logging.level = "INFO"

# CMake build type
cmake.build-type = "Release"

# Whether to editable install
editable.verbose = true